--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gulp-html-replace": "^1.4.5",
     "gulp-streamify": "0.0.5",
     "gulp-uglify": "^1.1.0",
+    "react": "^0.13.3",
     "reactify": "^1.1.1",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.2.1"
