--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "browserify": "^10.2.1",
     "gulp": "^3.8.11",
     "gulp-html-replace": "^1.4.5",
+    "gulp-minify-css": "^1.1.1",
+    "gulp-rename": "^1.2.2",
     "gulp-streamify": "0.0.5",
     "gulp-uglify": "^1.1.0",
     "react": "^0.13.3",
