--- a/package.json
+++ b/package.json
@@ -1,31 +1,33 @@
 {
-  "name": "Flowcharter",
+  "name": "reactjs-docker-boilerplate",
   "version": "0.0.1",
-  "description": "Cool looking online flowcharts",
+  "description": "For dockerizing your reactjs applications",
   "main": "index.js",
   "scripts": {
     "test": "npm test"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/codeboxsystems/flowcharter.git"
+    "url": "https://github.com/roblayton/reactjs-docker-boilerplate.git"
   },
   "author": "Rob Layton hire@roblayton.com",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/codeboxsystems/flowcharter/issues"
+    "url": "https://github.com/roblayton/reactjs-docker-boilerplate/issues"
   },
-  "homepage": "https://github.com/codeboxsystems/flowcharter",
+  "homepage": "https://github.com/roblayton/reactjs-docker-boilerplate",
   "devDependencies": {
     "browserify": "^10.2.1",
     "gulp": "^3.8.11",
     "gulp-html-replace": "^1.4.5",
     "gulp-minify-css": "^1.1.1",
     "gulp-rename": "^1.2.2",
+    "gulp-shell": "^0.4.1",
     "gulp-streamify": "0.0.5",
     "gulp-uglify": "^1.1.0",
     "react": "^0.13.3",
     "reactify": "^1.1.1",
+    "request": "^2.56.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.2.1"
   }
